@@ -11,6 +11,7 @@ Version 4.0.12 (2013-12-xx)
 	Fixed bug where the default time format for the inserttime split button wasn't the first item in the list.
 	Fixed bug where the default text for the formatselect control wasn't properly translated by the language pack.
 	Fixed bug where links would be inserted incorrectly when auto detecting absolute urls/emails links in inline mode.
+	Fixed bug where IE 11 would insert contents in the wrong order due to focus/blur async problems.
 	Fixed so image button isn't set to an active state when selecting control/media placeholder items.
 Version 4.0.11 (2013-11-20)
 	Added the possibility to update button icon after it's been rendered.
